# django-model-import

./: .gitignore  .travis.yml  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
djangomodelimport/: __init__.py  caches.py  core.py  fields.py  formclassbuilder.py  forms.py  loaders.py  magic.py  parsers.py  results.py  resultset.py  utils.py  widgets.py
djangomodelimport/example/simpleimport/: importers.py  views.py
example/: citations.csv  requirements.txt
example/testapp/: forms.py  importers.py  models.py  settings.py  tests.py  urls.py  views.py
example/testapp/migrations/: 0001_initial.py  0002_auto_20180220_0024.py  0003_auto_20180222_0450.py
example/testapp/templates/testapp/: base.html  create.html  testimport.html
tests/djangoexample/: manage.py
tests/djangoexample/testapp/: admin.py  forms.py  importers.py  models.py  settings.py  tests.py  urls.py  views.py
tests/djangoexample/testapp/migrations/: 0001_initial.py
