[tool.poetry]
name = "djangomodelimport"
version = "0.4.6"
description = ""
authors = ["Aidan Lister <aidan@uptickhq.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/uptick/django-model-import"
repository = "https://github.com/uptick/django-model-import"
documentation = "https://github.com/uptick/django-model-import/tree/master/tests/djangoexample"

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.8.2"
tablib = "^3.0.0"
Django = "^3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
