[tool.poetry]
name = "django-model-import"
version = "0.4.14"
description = "A Django library for importing CSVs and other structured data quickly using Django's ModelForm for validation and deserialisation into an instance."
authors = ["Aidan Lister <aidan@uptickhq.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/uptick/django-model-import"
repository = "https://github.com/uptick/django-model-import"
documentation = "https://github.com/uptick/django-model-import/tree/master/tests/djangoexample"
packages = [
    {include = "djangomodelimport"}
]

[tool.poetry.dependencies]
python = "^3.9"
python-dateutil = "^2.7.0"
tablib = "^3.0.0"
Django = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jsonfield = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
